<resources>
    <string name="app_name">BookingAppTim</string>
    <string name="splash">Splash</string>
    <string name="login">Log In</string>
    <string name="username">Enter your username:</string>
    <string name="password">Enter your password:</string>
    <string name="loginButton">Log In</string>
    <string name="registerButton">Register</string>
    <string name="home">Home</string>
    <string name="emailHint">Enter your email:</string>
    <string name="phoneHint">Enter your phone:</string>
    <string name="passHint">Enter your password:</string>
    <string name="register">Register</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filters">filter</string>
    <string name="sort">sort\n</string>
    <string name="category">Category</string>
</resources>