<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterScreen"
    android:layout_margin="16dp"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="60sp"
        android:textStyle="italic"
        android:layout_weight="0"/>

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:layout_weight="0"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/phoneHint"
        android:inputType="phone"
        android:layout_weight="0"/>

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword"
        android:layout_weight="0"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/registerConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"
        />
</LinearLayout>