<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="207dp"
        android:layout_height="121dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="60sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="340dp"
        android:layout_height="134dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="text|textEmailAddress"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="341dp"
        android:layout_height="152dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="335dp"
        android:layout_height="85dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="489dp"
        android:text="@string/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="335dp"
        android:layout_height="85dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="603dp"
        android:text="@string/registerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>